--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
 html {
   font-size: 20px;
 }
@@ -5,7 +10,18 @@ html {
 body {
   background-color: rgb(43,228,234);
   text-align: center;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  /* font-family: 'VT323', monospace; */
+  font-family: 'Bungee Shade', cursive;
+  /* font-family: 'Monoton', cursive; */
+  /* font-family: 'IBM Plex Mono', monospace; */
+}
+
+h1 {
+  font-size: 3em;
 }
 
 a {
@@ -21,19 +37,17 @@ a:hover {
   border-bottom-color: rgb(0,0,255);
 }
 
-a#pizza-crust {
-  background-color: rgb(255,24,76);
+#pizza-crust {
+  background-color: rgb(253,237,0);
+  white-space: nowrap;
 }
 
-a#pizza-sauce {
-  background-color: rgb(255,87,125);
-
+#pizza-sauce {
+  background-color: rgb(255,43,43);
+  white-space: nowrap;
 }
 
-a#pizza-cheeses {
-  background-color: rgb(254,0,254);
-}
-
-img#ascii-pizza {
-
+#pizza-cheeses {
+  background-color: rgb(255,255,255);
+  white-space: nowrap;
 }
