--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ body {
   background-color: rgb(43,228,234);
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
+  padding: 0;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,6 +27,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 3em;
+  display: inline-block;
+  margin-bottom: 0;
 }
 
 a {
@@ -43,16 +47,19 @@ a:hover {
 #pizza-crust {
   background-color: rgb(253,237,0);
   white-space: nowrap;
+  display: inline-block;
 }
 
 #pizza-sauce {
   background-color: rgb(255,43,43);
   white-space: nowrap;
+  display: inline-block;
 }
 
 #pizza-cheeses {
   background-color: rgb(255,255,255);
   white-space: nowrap;
+  display: inline-block;
 }
 
 .home {
