--- a/css/main.css
+++ b/css/main.css
@@ -8,24 +8,32 @@
 }
 
 html {
-
+  border: 20px solid rgb(0,0,0);
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  clear: both;
+  display: table;
 }
 
 body {
   background-color: rgb(43,228,234);
-  text-align: center;
   font-family: 'Courier New', Courier, monospace;
-  width: 100vw;
-  height: 100vh;
+
+  width: 100%;
+  border: 5px solid rgb(255,87,125);
+  height: 100%;
   /*  
   border-top: 20px solid rgb(0,0,0);
   border-right: 20px solid rgb(255,132,0);
   border-bottom: 20px solid rgb(61,37,123);
   border-left: 20px solid rgb(253,237,0);
   */
-  border: 20px solid rgb(0,0,0);
   padding: 0;
-  margin: 0;
+  margin: auto;
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -74,4 +82,15 @@ a:hover {
 
 .home {
   color: rgb(255,255,255);
+}
+
+ul, ol {
+  display: inline-block;
+  width: 50%;
+  text-align: left;
+}
+
+li {
+  margin: 0;
+  padding: 0;
 }
