--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
 
   width: 100%;
-  border: 5px solid rgb(255,87,125);
+  border: 5px dotted rgb(255,87,125);
   height: 100%;
   /*  
   border-top: 20px solid rgb(0,0,0);
@@ -91,7 +91,6 @@ ul, ol {
 }
 
 li {
-  margin: auto;
+  margin: 0 auto;
   padding: 0;
-  width: 50%;
 }
