--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 3em;
   margin: var(--default-margin) 0;
+}
+
+h1::before, h1::after {
+  content: '';
+  background: url('../img/pizza_by_jackaloops_d82wdsk.gif') center center no-repeat;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
 }
 
 a {
