--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,11 @@ nav {
 }
 
 @media screen and (max-width: 320px) {
+  h1 {
+    flex-direction: column;
+    font-size: 2em;
+  }
+
   nav {
     flex-direction: column;
   }
